Fixed Bug 73791 - Mobile. Checkbox placement does not work with the first tap on iOS devices

--- a/packages/shared/components/rows/row/Row.module.scss
+++ b/packages/shared/components/rows/row/Row.module.scss
@@ -95,16 +95,18 @@
   }
 }
 
-.modern .checkboxElement:hover {
-  &:not(.isIndexEditingMode) {
-    .checkbox {
-      display: flex;
-      opacity: 1;
-      user-select: none;
-    }
+@include not-mobile {
+  .modern .checkboxElement:hover {
+    &:not(.isIndexEditingMode) {
+      .checkbox {
+        display: flex;
+        opacity: 1;
+        user-select: none;
+      }
 
-    .element {
-      display: none;
+      .element {
+        display: none;
+      }
     }
   }
 }
